# dendrite

./: .gitignore  3d_examples.py  README.md  basic_example.py  dendrite.csv  extrude.py  geometry.py  mesh.py  pyproject.toml  requirements.txt  setup.py  snowflake.py  snowflake_mesh.py  stats.py
cli/: cli.py
data/: dendrite_branch.csv  stellarplate.csv
data/meshes/: basic_ex.csv  int_ex.csv  mix_ex.csv
data/polygons/snowflake/: poly_0.csv  poly_1.csv  poly_10.csv  poly_11.csv  poly_12.csv  poly_13.csv  poly_14.csv  poly_15.csv  poly_16.csv  poly_17.csv  poly_18.csv  poly_19.csv  poly_2.csv  poly_20.csv  poly_21.csv  poly_22.csv  poly_23.csv  poly_24.csv  poly_25.csv  poly_26.csv  poly_27.csv  poly_28.csv  poly_29.csv  poly_3.csv  poly_30.csv  poly_31.csv  poly_32.csv  poly_33.csv  poly_34.csv  poly_35.csv  poly_36.csv  poly_37.csv  poly_38.csv  poly_39.csv  poly_4.csv  poly_40.csv  poly_41.csv  poly_42.csv  poly_5.csv  (+4 more)
deprecated/: basic_example.py  snowflake.py
examples/: 3d_examples.py  basic_square.py  branch.py  dendrite.py  dendrite_branch.py  hybrid_mesh.py  intersecting_squares.py  mixed_regions.py  simple_square.py  snowflake.py  snowflake_particles.py  stellar_plate.py  stellarplate.py
geometry/: base_geometry.py  combined_cube_mesh.py  hex_geometry.py  mesh_geometry.py  rect_geometry.py  stats.py  strict_mesh.py  tri_geometry.py
mesh_generation/: extrude.py  geometry.py  mesh.py  snowflake_mesh.py  square.py  square_mesh.py  stats.py
particle_sim/: animations.py  geometry.py  physics.py  solver.py
simulation/: animations.py  solver.py
