[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dendrite"
version = "0.1.0"
dependencies = [
    "matplotlib==3.10.9",
    "polars==1.41.2",
    "numpy==2.4.4",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "hexalattice==1.3.0",
    "shapely==2.1.2",
    "jax==0.10.0",
    "diffrax==0.7.2",
    "argparse==1.4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["geometry", "simulation", "cli"]

[project.scripts]
dendrite = "cli.cli:main"